--- a/index.html
+++ b/index.html
@@ -329,7 +329,6 @@
 		}
 		video 
 		{
-			max-width: 100%;
 			height: auto;
 			margin:30px 30px 30px 25%;
 		}
@@ -380,6 +379,10 @@
 			{
 			margin-left: 25%;
 			}
+			body,html 
+			{
+				overflow-x: hidden !important;
+			}
 			.w3-container
 			{
 				height:120px;
@@ -404,7 +407,8 @@
 			}
 			video 
 			{
-				margin:30px 0px 30px 0;
+				margin:0;
+				width:400px;
 			}
 		}
 		
